--- a/unitils-core/pom.xml
+++ b/unitils-core/pom.xml
@@ -15,12 +15,12 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+                <version>${junit.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
-            <version>1.1</version>
+            <version>${commons-logging.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>avalon-framework</groupId>
@@ -43,17 +43,17 @@
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
-            <version>2.3</version>
+            <version>${commons-lang.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
-            <version>3.2</version>
+            <version>${commons-collections.version}</version>
         </dependency>
         <dependency>
             <groupId>ognl</groupId>
             <artifactId>ognl</artifactId>
-            <version>2.6.9</version>
+            <version>${ognl.version}</version>
         </dependency>
     </dependencies>
 </project>
