--- a/unitils-database/pom.xml
+++ b/unitils-database/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>commons-dbcp</groupId>
             <artifactId>commons-dbcp</artifactId>
-            <version>1.4</version>
+            <version>${commons-dbcp.version}</version>
             <scope>compile</scope>
             <exclusions>  <!-- not needed dependencies -->
                 <exclusion>
