--- a/unitils-easymock/pom.xml
+++ b/unitils-easymock/pom.xml
@@ -20,17 +20,17 @@
         <dependency>
             <groupId>org.easymock</groupId>
             <artifactId>easymock</artifactId>
-            <version>3.2</version>
+            <version>${easymock.version}</version>
         </dependency>
         <dependency>
             <groupId>cglib</groupId>
             <artifactId>cglib</artifactId>
-            <version>2.2</version>
+            <version>${cglib.version}</version>
         </dependency>
         <dependency>
             <groupId>org.easymock</groupId>
             <artifactId>easymockclassextension</artifactId>
-            <version>3.2</version>
+            <version>${easymockclassextension.version}</version>
         </dependency>
     </dependencies>
 </project>
