--- a/unitils-mock/pom.xml
+++ b/unitils-mock/pom.xml
@@ -16,7 +16,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>2.1</version>
+                <version>${maven-shade-plugin.version}</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -63,27 +63,27 @@
         <dependency>
             <groupId>cglib</groupId>
             <artifactId>cglib</artifactId>
-            <version>2.2</version>
+            <version>${cglib.version}</version>
         </dependency>
         <dependency>
             <groupId>asm</groupId>
             <artifactId>asm</artifactId>
-            <version>3.1</version>
+            <version>${asm.version}</version>
         </dependency>
         <dependency>
             <groupId>asm</groupId>
             <artifactId>asm-analysis</artifactId>
-            <version>3.1</version>
+            <version>${asm.version}</version>
         </dependency>
         <dependency>
             <groupId>asm</groupId>
             <artifactId>asm-tree</artifactId>
-            <version>3.1</version>
+            <version>${asm.version}</version>
         </dependency>
         <dependency>
             <groupId>org.objenesis</groupId>
             <artifactId>objenesis</artifactId>
-            <version>2.1</version>
+            <version>${objenesis.version}</version>
         </dependency>
     </dependencies>
 </project>
