--- a/unitils-orm/pom.xml
+++ b/unitils-orm/pom.xml
@@ -55,17 +55,12 @@
             <artifactId>spring-orm</artifactId>
             <version>${spring.version}</version>
         </dependency>
-       <!--  <dependency>
-            <groupId>javax.persistence</groupId>
-            <artifactId>persistence-api</artifactId>
-            <version>1.0</version>
-        </dependency> -->
 
         <!-- Optional dependencies -->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>3.6.10.Final</version>
+            <version>${hibernate.version}</version>
             <optional>true</optional>
             <exclusions>
                 <exclusion>
@@ -77,25 +72,25 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>3.6.10.Final</version>
+            <version>${hibernate.version}</version>
             <optional>true</optional>
         </dependency>
         <dependency>
           <groupId>org.hibernate.javax.persistence</groupId>
           <artifactId>hibernate-jpa-2.0-api</artifactId>
-          <version>1.0.1.Final</version>
+            <version>${hibernate-jpa-2.0-api.version}</version>
           <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>concurrent</groupId>
             <artifactId>concurrent</artifactId>
-            <version>1.3.4</version>
+            <version>${concurrent.version}</version>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.apache.geronimo.specs</groupId>
             <artifactId>geronimo-jta_1.1_spec</artifactId>
-            <version>1.1</version>
+            <version>${geronimo-jta_1.1_spec.version}</version>
             <optional>true</optional>
         </dependency>
     </dependencies>
