--- a/unitils-testng-test/pom.xml
+++ b/unitils-testng-test/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.unitils</groupId>
         <artifactId>unitils</artifactId>
-        <version>3.0-SNAPSHOT</version>
+        <version>3.4.6</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>unitils-testng-test</artifactId>
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.8</version>
+            <version>${log4j.version}</version>
         </dependency>
     </dependencies>
 
