--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
     <groupId>org.unitils</groupId>
     <artifactId>unitils</artifactId>
-    <version>3.4.6</version>
+    <version>3.4.6.1</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -44,7 +44,6 @@
         <module>unitils-io</module>
 
         <module>unitils-test</module>
-        <module>unitils-sample</module>
         <!--module>unitils-testng-test</module-->       <!-- todo convert tests to TestNG -->
     </modules>
 
@@ -75,6 +74,7 @@
         <commons-logging.version>1.1.1</commons-logging.version>
         <commons-lang.version>2.3</commons-lang.version>
         <commons-collections.version>3.2</commons-collections.version>
+        <commons-beanutils.version>1.9.4</commons-beanutils.version>
         <ognl.version>2.6.9</ognl.version>
         <dbunit.version>2.7.0</dbunit.version>
         <xmlunit.version>1.2</xmlunit.version>
