--- a/unitils-dbunit/pom.xml
+++ b/unitils-dbunit/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.unitils</groupId>
     <artifactId>unitils</artifactId>
-    <version>3.4.6</version>
+    <version>3.4.6.1</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>unitils-dbunit</artifactId>
@@ -69,5 +69,10 @@
       <artifactId>xmlunit</artifactId>
       <version>${xmlunit.version}</version>
     </dependency>
+      <dependency>
+          <groupId>commons-beanutils</groupId>
+          <artifactId>commons-beanutils</artifactId>
+          <version>${commons-beanutils.version}</version>
+      </dependency>
   </dependencies>
 </project>
